@@ -6,7 +6,7 @@
     <parent>
         <groupId>wang.liangchen.matrix</groupId>
         <artifactId>matrix-framework</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>matrix-framework-complier</artifactId>
@@ -23,45 +23,4 @@
             <version>1.0.1</version>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-                        <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.4.1</version>
-                <configuration>
-                    <additionalOptions>
-                        <option>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</option>
-                        <option>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</option>
-                        <option>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</option>
-                        <option>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</option>
-                        <option>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</option>
-                    </additionalOptions>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 </project>
